packages/jsii/test/negatives/neg.internal-underscore-class.6.ts
export class MyClass {
  public _propertyWithUnderscoreButNoInternal?: string;
}
